--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <section id="Skill">
             <h2>skills</h2>
             <ul>
-                <li><img src="/images/html.png" alt="HTML image" class="skill-pic" height="125px"> </li>
+                <li><img src="images/html.png" alt="HTML image" class="skill-pic" height="125px"> </li>
                 <li><img src="/images/css.png" alt="CSS image" class="skill-pic" height="125px"></li>
                 <li><img src="/images/java.png" alt="Java image" class="skill-pic" height="125px"></li>
                 <li><img src="/images/phython.webp.png" alt="Phython image" height="125px"></li>
