--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header id="container">
         <div class="container1">
-            <img src="/images/profile_pic.jpg" alt="Sudip photo" class="profile-pic" />
+            <img src="images/profile_pic.jpg" alt="Sudip photo" class="profile-pic" />
             </div>
             <div class="container2">
                 <h1>Sudip Karmakar</h1>
@@ -55,10 +55,10 @@
             <h2>skills</h2>
             <ul>
                 <li><img src="images/html.png" alt="HTML image" class="skill-pic" height="125px"> </li>
-                <li><img src="/images/css.png" alt="CSS image" class="skill-pic" height="125px"></li>
-                <li><img src="/images/java.png" alt="Java image" class="skill-pic" height="125px"></li>
-                <li><img src="/images/phython.webp.png" alt="Phython image" height="125px"></li>
-                <li><img src="/images/c.png" alt="C image" class="skill-pic" height="125px"></li>
+                <li><img src="images/css.png" alt="CSS image" class="skill-pic" height="125px"></li>
+                <li><img src="images/java.png" alt="Java image" class="skill-pic" height="125px"></li>
+                <li><img src="images/phython.webp.png" alt="Phython image" height="125px"></li>
+                <li><img src="images/c.png" alt="C image" class="skill-pic" height="125px"></li>
                 
             </ul>
         </section>
